view goal of account

--- a/ark/templates/index.html
+++ b/ark/templates/index.html
@@ -4,6 +4,9 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='styles/master/index.css') }}" type="text/css" />
 {%- endblock %}
 
+{%- block header %}{%- endblock %}
+{%- block footer %}{%- endblock %}
+
 {%- block main %}
 <div class="main">
   <div class="wrapper" id="logo-container">
