--- a/ark/templates/account/goals.html
+++ b/ark/templates/account/goals.html
@@ -5,42 +5,16 @@
 {%- endblock %}
 
 {%- block main %}
-<div id="header">
-  <div id="logo"></div>
-  <div class="nav">
-    <ul>
-      <li class="my-goal"><i class="iconfont icon-profile"></i><a href="#">{{ _('My Goals') }}</a></li>
-      <li class="chasers"><i class="iconfont icon-chaser"></i><a href="#">{{ _('Chasers') }}</a></li>
-      <li class="goals"><i class="iconfont icon-dream"></i><a href="#">{{ _('Dreams Wall') }}</a></li>
-    </ul>
-  </div>
-  <div class="profile">
-    <div class="avatar">
-      <img src="{{ current_user.avatar_url }}"/>
-    </div>
-    <div class="info">
-      {{ current_user.username }}
-      <i class="iconfont icon-small icon-unfold"></i>
-      <ul>
-        <li><i class="iconfont icon-setting"></i> 设置</li>
-        <li><i class="iconfont icon-msg"></i> 消息</li>
-        <li><a href="{{ url_for('account.signout') }}"><i class="iconfont icon-signout"></i> 退出</a></li>
-      </ul>
-    </div>
-  </div>
-</div>
-
-<div class="main">
-
+<div class="main" id="account-goals">
   <div class="wrapper">
     <div class="title"><span>{{ _('Chasing') }}</span></div>
     <ul>
       {% for each in charsing_goals %}
       <li class="cards-container normal-card" style="background-image: url('{{each.image.get_thumbnail(250, 150)}}')">
-        <div class="card">
+        <a class="card" href="{{ url_for('account.goal', gid=each.id) }}">
           <div class="card-title">{{ each.title }}</div>
           <div class="card-like"><i class="iconfont icon-small icon-xiai"></i> {{ each.like_count }}</div>
-        </div>
+        </a>
       </li>
       {% endfor %}
       <li class="cards-container create-card">
@@ -61,6 +35,5 @@
     </ul>
   </div>
   {% endif %}
-
 </div>
 {%- endblock %}
