--- a/ark/templates/layout.html
+++ b/ark/templates/layout.html
@@ -57,7 +57,7 @@
     </div>
   </div>
   {%- endblock %}
-  {%- block script %}
+  {%- block scripts %}
   {%- endblock %}
   {%- include 'inc/analytics.html' %}
 </body>
