add update activity

--- a/ark/account/assets/styles/goals.styl
+++ b/ark/account/assets/styles/goals.styl
@@ -85,6 +85,7 @@
 #account-goal.main
   padding-top 40px
   .goal
+    box-shadow 1px 1px 9px #ddd
     .banner-image
       background-color #666
       position relative
@@ -129,3 +130,46 @@
         color #333
     .btn-group
       padding-top 16px
+      .btn
+        margin 0 10px
+
+  .activity-container
+    width 760px
+    margin-left 20px
+
+    .create-activity
+      box-shadow 1px 1px 9px #ddd
+      background #fff
+      padding 10px
+      textarea
+        width 100%
+        resize none
+        height 120px
+        box-sizing border-box
+        border 1px solid #ddd
+        padding 10px
+      .tool
+        margin-top 10px
+        overflow hidden
+        a
+          color #666
+          padding 20px
+        #preview
+          width 80px
+
+    .activitiess
+      .activity
+        box-shadow 1px 1px 9px #ddd
+        font-size 16px
+        margin-top 20px
+        padding 16px
+        background #fff
+
+      .activity-image
+        margin 10px 0
+        img
+          width 150px
+          height 150px
+      .activity-time
+        color #999
+        font-size 14px
