--- a/ark/master/assets/styles/base.styl
+++ b/ark/master/assets/styles/base.styl
@@ -18,6 +18,12 @@ ul, li
   padding 0
   list-style none
 
+.pull-left
+  float left
+
+.pull-right
+  float right
+
 #header
   width 100%
   height 50px
@@ -101,17 +107,26 @@ ul, li
       a
         color #666
 
+.main
+  overflow hidden
+  padding-bottom 80px
+
 .btn-group.center
   text-align center
   margin 0 auto
 
-.btn-group
-  .btn
-    font-size 14px
-    padding 12px 30px
-    margin 0 10px
-    border-radius 3px
-    display inline-block
-    background #ababab
-  .btn-success
-    background #0dadb7
+.btn
+  color #fff
+  border none
+  font-size 14px
+  padding 12px 30px
+  border-radius 3px
+  display inline-block
+  background #ababab
+  &[disabled]
+    color #eee
+.btn-success
+  background #0dadb7
+  &[disabled]
+    color #999
+    background #0d8d97
