--- a/ark/templates/account/goal.html
+++ b/ark/templates/account/goal.html
@@ -41,7 +41,7 @@
       </form>
     </div>
     <div class="activitiess">
-      {% for each in goal.activities %}
+      {% for each in activities %}
       <div class="activity">
         {{ each.activity }} 
         <div class="activity-image">
