fadeIn after complete uploading

--- a/ark/account/assets/styles/goals.styl
+++ b/ark/account/assets/styles/goals.styl
@@ -157,7 +157,7 @@
         #preview
           width 80px
 
-    .activitiess
+    .activities
       .activity
         box-shadow 1px 1px 9px #ddd
         font-size 16px
