--- a/ark/templates/account/goals.html
+++ b/ark/templates/account/goals.html
@@ -10,7 +10,7 @@
     <div class="title"><span>{{ _('Chasing') }}</span></div>
     <ul>
       {% for each in charsing_goals %}
-      <li class="cards-container normal-card" style="background-image: url('{{each.image.get_thumbnail(250, 150)}}')">
+      <li class="cards-container normal-card" style="background-image: url('{{each.image.get_thumbnail_limit_width(250)}}')">
         <a class="card" href="{{ url_for('account.goal', gid=each.id) }}">
           <div class="card-title">{{ each.title }}</div>
           <div class="card-like"><i class="iconfont icon-small icon-xiai"></i> {{ each.like_count }}</div>
@@ -27,7 +27,7 @@
     <div class="title"><span>{{ _('Completed') }}</span></div>
     <ul>
       {% for each in completed_goals %}
-      <li class="cards-container normal-card" style="background-image: url('{{each.image.get_thumbnail(250, 150)}}')">
+      <li class="cards-container normal-card" style="background-image: url('{{each.image.get_thumbnail_limit_width(250)}}')">
         <div class="card">
         </div>
       </li>
