--- a/ark/account/assets/styles/goals.styl
+++ b/ark/account/assets/styles/goals.styl
@@ -21,7 +21,7 @@
 
   .cards-container.normal-card
     overflow hidden
-    background-size 100% 100%
+    background-position center center
     transition-duration 0.25s
     width 246px
     height 146px
