update style of banner card

--- a/ark/account/assets/styles/goals.styl
+++ b/ark/account/assets/styles/goals.styl
@@ -88,6 +88,7 @@
     box-shadow 1px 1px 9px #ddd
     .banner-image
       background-color #666
+      background-position center
       position relative
       background-repeat no-repeat
       margin 0
