add link of footer

--- a/ark/templates/layout.html
+++ b/ark/templates/layout.html
@@ -48,10 +48,10 @@
       <p>&copy; 2015 iChaser 追者</p>
       <p>
         <ul class="nav">
-          <li><a href="{{ url_for('master.about') }}">关于我们</a></li>
+          <li><a href="http://blog.ichaser.net/aboutus">关于我们</a></li>
           <li><a href="http://weibo.com/ichaser">官方微博</a></li>
           <li><a href="{{ url_for('master.feedback') }}">意见反馈</a></li>
-          <li><a href="#">联系我们</a></li>
+          <li><a href="http://blog.ichaser.net/contact">联系我们</a></li>
         </ul>
       </p>
     </div>
