not required image of activity

--- a/ark/account/assets/styles/goals.styl
+++ b/ark/account/assets/styles/goals.styl
@@ -172,5 +172,6 @@
           width 150px
           height 150px
       .activity-time
+        margin-top 10px
         color #999
         font-size 14px
