--- a/ark/templates/account/goal.html
+++ b/ark/templates/account/goal.html
@@ -14,7 +14,7 @@
     <div class="goal-info">
       <div class="title">{{ goal.title }}</div>
       <div class="state-like">
-        <span class="state">{{ goal.state }}</span>
+        <span class="state">{{ goal.display_state() }}</span>
         <span class="like"><i class="iconfont icon-small icon-xiai"></i> {{ goal.like_count }}</span>
       </div>
       <div class="goal-description">
@@ -63,6 +63,5 @@
 <script src="{{ url_for('static', filename='components/jquery-validation/dist/jquery.validate.min.js') }}"></script>
 <script src="{{ url_for('static', filename='components/tooltipster/js/jquery.tooltipster.min.js') }}"></script>
 <script src="{{ url_for('static', filename='components/plupload/js/plupload.full.min.js') }}"></script>
-<script src="{{ url_for('static', filename='components/qiniu-js-sdk/src/qiniu.js') }}"></script>
-<script src="{{ url_for('static', filename='scripts/goal/activity.js')}}"></script>
+<script src="{{ url_for('static', filename='components/qiniu-js-sdk/src/qiniu.js') }}"></script> <script src="{{ url_for('static', filename='scripts/account/activity.js')}}"></script>
 {%- endblock %}
