--- a/ark/templates/account/goals.html
+++ b/ark/templates/account/goals.html
@@ -28,8 +28,10 @@
     <ul>
       {% for each in completed_goals %}
       <li class="cards-container normal-card" style="background-image: url('{{each.image.get_thumbnail_limit_width(250)}}')">
-        <div class="card">
-        </div>
+        <a class="card" href="{{ url_for('account.goal', gid=each.id) }}">
+          <div class="card-title">{{ each.title }}</div>
+          <div class="card-like"><i class="iconfont icon-small icon-xiai"></i> {{ each.like_count }}</div>
+        </a>
       </li>
       {% endfor %}
     </ul>
