--- a/ark/master/assets/styles/base.styl
+++ b/ark/master/assets/styles/base.styl
@@ -24,25 +24,39 @@ ul, li
 .pull-right
   float right
 
+input, textarea
+  width 100%
+  padding 10px
+  font-size 16px
+  border 1px solid #ddd
+  box-sizing border-box
+  border-radius 4px
+
+.display-hide
+  display none
+
 #header
   width 100%
   height 50px
   background-color #333538
 
   #logo
+    display block
     float left
-    width 200px
+    width 240px
     height 60px
-    background #0dadb7
+    background #0dadb7 no-repeat
+    background-image url(/static/images/logo.png)
+    background-size 90% 75%
+    background-position center center
 
   .nav
-    margin-left 60px
+    margin-left 20px
     display inline-block
     li
       transition-duration 0.25s
-      min-width 100px
       color #fff
-      padding 0px 10px
+      padding 0px 30px
       display inline-block
       height 45px
       line-height 45px
