--- a/ark/templates/account/goal.html
+++ b/ark/templates/account/goal.html
@@ -67,5 +67,6 @@
 <script src="{{ url_for('static', filename='components/jquery-validation/dist/jquery.validate.min.js') }}"></script>
 <script src="{{ url_for('static', filename='components/tooltipster/js/jquery.tooltipster.min.js') }}"></script>
 <script src="{{ url_for('static', filename='components/plupload/js/plupload.full.min.js') }}"></script>
-<script src="{{ url_for('static', filename='components/qiniu-js-sdk/src/qiniu.js') }}"></script> <script src="{{ url_for('static', filename='scripts/account/activity.js')}}"></script>
+<script src="{{ url_for('static', filename='components/qiniu-js-sdk/src/qiniu.js') }}"></script>
+<script src="{{ url_for('static', filename='scripts/account/activity.js')}}"></script>
 {%- endblock %}
