--- a/ark/account/assets/styles/goals.styl
+++ b/ark/account/assets/styles/goals.styl
@@ -222,11 +222,11 @@
     margin-bottom 18px
     height 110px
     .pic
+      border 2px solid transparent
       position absolute
-      width 180px
-      height 100px
+      height 96px
+      width 176px
       overflow hidden
-      border none
       img
         border none
         width 100%
