--- a/ark/account/assets/styles/goals.styl
+++ b/ark/account/assets/styles/goals.styl
@@ -85,6 +85,7 @@
 #account-goal.main
   padding-top 40px
   .goal
+    position absolute
     box-shadow 1px 1px 9px #ddd
     .banner-image
       background-color #666
@@ -135,8 +136,7 @@
         margin 0 10px
 
   .activity-container
-    width 760px
-    margin-left 20px
+    margin-left 380px
 
     .create-activity
       box-shadow 1px 1px 9px #ddd
