--- a/ark/templates/dashboard/base.html
+++ b/ark/templates/dashboard/base.html
@@ -26,6 +26,7 @@
         <div class="pull-left menu">
           <ul class="nav">
             <li><a href="{{ url_for('dashboard.index') }}">{{ _('Dashboard') }}</a></li>
+            <li><a href="{{ url_for('dashboard.system_msgs') }}">{{ _('System Messages') }}</a></li>
             <li><a href="{{ url_for('dashboard.notifications') }}">{{ _('Notifications') }}</a></li>
             <li><a href="{{ url_for('dashboard.accounts') }}">{{ _('Account Manage') }}</a></li>
             <li><a href="{{ url_for('dashboard.goals') }}">{{ _('Goal Manage') }}</a></li>
