--- a/ark/account/assets/styles/goals.styl
+++ b/ark/account/assets/styles/goals.styl
@@ -124,8 +124,10 @@
           font-size 14px
           margin-left 40px
           .icon-xiai
-            color #ff0000
+            color #aaa
             font-size 12px
+          .icon-xiai.liked
+            color #ff0000
       .goal-description
         font-size 14px
         padding 10px 30px
