--- a/ark/templates/account/goals.html
+++ b/ark/templates/account/goals.html
@@ -63,7 +63,7 @@
       <li class="cards-container normal-card" style="background-image: url('{{each.image.get_thumbnail_limit_width(250)}}')">
         <a class="card" href="{{ url_for('account.goal', gid=each.id) }}">
           <div class="card-title">{{ each.title }}</div>
-          <div class="card-like"><i class="iconfont icon-small icon-xiai"></i> {{ each.like_count }}</div>
+          <div class="card-like"><i class="iconfont icon-small icon-xiai {% if each.is_like_by(current_user) %}liked {% endif %}"></i> {{ each.like_count }}</div>
         </a>
       </li>
       {% endfor %}
