--- a/ark/master/assets/styles/base.styl
+++ b/ark/master/assets/styles/base.styl
@@ -35,6 +35,21 @@ input, textarea
 .display-hide
   display none
 
+#msgContainer
+  position absolute
+  font-size 14px
+  color #333
+  background #fff
+  top 45px
+  right 130px
+  line-height 20px
+  padding 10px 18px
+  box-shadow 2px 2px 6px #999
+  a
+    color #333
+  a.closeBtn
+    padding-left 20px;
+
 #header
   width 100%
   height 50px
@@ -66,28 +81,12 @@ input, textarea
         border-bottom #0dadb7 5px solid;
 
   .profile
+    position relative
     color #fff
     float right
     line-height 40px
     margin-right 100px
-    &:hover ul
-      display block
-    ul
-      display none
-      padding 10px 0
-      position absolute
-      background-color #333538
-      li
-        width 130px
-        height 40px
-        line-height 30px
-        padding 0 20px
-        background-color #333538
-        transition-duration 0.25s
-        &:hover
-          cursor pointer
-          background-color #686E76
-    .avatar
+   .avatar
       display inline-block
       float left
       line-height 46px
@@ -100,6 +99,26 @@ input, textarea
       float left
       line-height 50px
       padding 0 10px
+      &:hover ul
+        display block
+      ul
+        display none
+        padding 10px 0
+        position absolute
+        background-color #333538
+        z-index 9999
+        li a
+          display block
+          width 130px
+          height 40px
+          line-height 30px
+          padding 0 20px
+          background-color #333538
+          transition-duration 0.25s
+          &:hover
+            cursor pointer
+            background-color #686E76
+   
 
 #footer
   position fixed
