--- a/ark/goal/assets/styles/goals.styl
+++ b/ark/goal/assets/styles/goals.styl
@@ -143,6 +143,7 @@
       box-shadow 1px 1px 9px #ddd
       background #fff
       padding 10px
+      margin-bottom 20px
       textarea
         width 100%
         resize none
@@ -163,7 +164,7 @@
       .activity
         box-shadow 1px 1px 9px #ddd
         font-size 16px
-        margin-top 20px
+        margin-bottom 20px
         padding 16px
         background #fff
 
