--- a/ark/master/assets/styles/base.styl
+++ b/ark/master/assets/styles/base.styl
@@ -70,12 +70,13 @@ input, textarea
     margin-left 20px
     display inline-block
     li
-      transition-duration 0.25s
-      color #fff
-      padding 0px 30px
       display inline-block
-      height 45px
-      line-height 45px
+      a
+        display block
+        color #fff
+        padding 0px 30px
+        height 45px
+        line-height 45px
 
       &:hover
         border-bottom #0dadb7 5px solid;
