--- a/ark/templates/layout.html
+++ b/ark/templates/layout.html
@@ -19,9 +19,9 @@
     <a href="{{ url_for('master.index') }}" id="logo"></a>
     <div class="nav">
       <ul>
-        <li class="my-goal"><i class="iconfont icon-profile"></i><a href="{{ url_for('goal.goals', uid=current_user.id) }}">{{ _('My Goals') }}</a></li>
-        <li class="chasers"><i class="iconfont icon-chaser"></i><a href="#">{{ _('Chasers') }}</a></li>
-        <li class="goals"><i class="iconfont icon-dream"></i><a href="#">{{ _('Dreams Wall') }}</a></li>
+        <li class="my-goal"><a href="{{ url_for('goal.goals', uid=current_user.id) }}"><i class="iconfont icon-profile"></i>{{ _('My Goals') }}</a></li>
+        <li class="chasers"><a href="#"><i class="iconfont icon-chaser"></i>{{ _('Chasers') }}</a></li>
+        <li class="goals"><a href="#"><i class="iconfont icon-dream"></i>{{ _('Dreams Wall') }}</a></li>
       </ul>
     </div>
     <div class="profile">
