--- a/ark/master/assets/styles/base.styl
+++ b/ark/master/assets/styles/base.styl
@@ -36,12 +36,13 @@ input, textarea
   display none
 
 #msgContainer
+  transition-duration 0.25s
   position absolute
   font-size 14px
   color #333
   background #fff
   top 45px
-  right 130px
+  right 60px
   line-height 20px
   padding 10px 18px
   box-shadow 2px 2px 6px #999
@@ -49,6 +50,8 @@ input, textarea
     color #333
   a.closeBtn
     padding-left 20px;
+  &:hover
+    opacity 1!important
 
 #header
   width 100%
@@ -87,6 +90,8 @@ input, textarea
     float right
     line-height 40px
     margin-right 100px
+    &:not(#msgContainer):hover div#msgContainer
+      opacity 0
    .avatar
       display inline-block
       float left
@@ -101,8 +106,11 @@ input, textarea
       line-height 50px
       padding 0 10px
       &:hover ul
+        opacity 1
         display block
       ul
+        transition-duration 0.25s
+        opacity 0
         display none
         padding 10px 0
         position absolute
@@ -119,7 +127,6 @@ input, textarea
           &:hover
             cursor pointer
             background-color #686E76
-   
 
 #footer
   position fixed
